--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UGF Gallery</title>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700&display=swap" rel="stylesheet">
     <style>
         body, html {
             margin: 0;
@@ -70,35 +70,38 @@
             background: rgba(0, 0, 0, 0.7); /* Adds small background to text */
             border-radius: 5px;
             text-align: center;
+            background-clip: text; /* Clip the background to the text */
+            -webkit-background-clip: text;
+            color: transparent; /* Make text transparent to show the gradient */
         }
 
-        /* Text colors for each logo */
+        /* Text gradients for each logo */
         .gmail-text {
-            color: #D14836; /* Gmail color scheme */
+            background: linear-gradient(45deg, #D14836, #F4C20D);
         }
 
         .microsoft-text {
-            color: #F25022; /* Microsoft color scheme */
+            background: linear-gradient(45deg, #F25022, #7FBA00, #00A4EF, #FFB900);
         }
 
         .disney-text {
-            color: #113CCF; /* Disney color scheme */
+            background: linear-gradient(45deg, #113CCF, #00A4EF);
         }
 
         .walmart-text {
-            color: #0071CE; /* Walmart color scheme */
+            background: linear-gradient(45deg, #0071CE, #F9A825);
         }
 
         .home-depot-text {
-            color: #F96302; /* Home Depot color scheme */
+            background: linear-gradient(45deg, #F96302, #FCCE03);
         }
 
         .mcdonalds-text {
-            color: #DA291C; /* McDonald's color scheme */
+            background: linear-gradient(45deg, #DA291C, #FFCC00);
         }
 
         .lego-text {
-            color: #E2231A; /* Lego color scheme */
+            background: linear-gradient(45deg, #E2231A, #FDDC00);
         }
 
         .custom-scrollbar {
@@ -150,7 +153,7 @@
                 <h2 class="section-title">United Federation</h2>
                 <div class="logo-grid">
                     <!-- United Federation Logos -->
-                    <!-- ... Same logos as before ... -->
+                    <!-- Add your images and logos here -->
                 </div>
             </section>
 
@@ -159,7 +162,7 @@
                 <h2 class="section-title">Corporate</h2>
                 <div class="logo-grid">
                     <!-- Corporate Logos -->
-                    <!-- ... Same logos as before ... -->
+                    <!-- Add your corporate logos here -->
                 </div>
             </section>
 
@@ -174,10 +177,6 @@
                     <div>
                         <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/GlyphAI%20(L).png" alt="Glyph AI">
                         <p>Glyph AI</p>
-                    </div>
-                    <div>
-                        <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Jetstream.png" alt="JetStream">
-                        <p>JetStream</p>
                     </div>
                     <div>
                         <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/GenoAI.png" alt="GenoAI">
