--- a/mainweb/gallery.html
+++ b/mainweb/gallery.html
@@ -152,17 +152,85 @@
             <section class="gallery-section">
                 <h2 class="section-title">United Federation</h2>
                 <div class="logo-grid">
-                    <!-- United Federation Logos -->
-                    <!-- Add your images and logos here -->
+<div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/United%20Gamer%20Federation%20(A).png" alt="United Federation Parent">
+                    <p>United Federation (Parent)</p>
                 </div>
-            </section>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Eradicator2.png" alt="United Federation Eradication Unit">
+                    <p>United Federation Eradication Unit</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/unitedgamerfederationfortificationunit.png" alt="United Federation Fortification Unit">
+                    <p>United Federation Fortification Unit</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/United%20Federation%20Incendiary%20Division.png" alt="United Federation Incendiary Division">
+                    <p>United Federation Incendiary Division</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/ugfmarinecorps.png" alt="United Federation Marine Corps">
+                    <p>United Federation Marine Corps</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/unitedgamerfederationnavy.png" alt="United Federation Navy">
+                    <p>United Federation Navy</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/synthintelligenceagency.png" alt="Synth Intelligence Agency">
+                    <p>Synth Intelligence Agency</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Void%20Evasion%20Special%20Forces.png" alt="Void Special Forces">
+                    <p>Void Evasion Special Forces</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/ugfresearchanddevelopment.png" alt="Advanced Research & Development">
+                    <p>Advanced Research & Development</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/cos-22.png" alt="Task Force Cos-22">
+                    <p>Task Force Cos-22</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/rift-404.png" alt="Task Force Rift-404">
+                    <p>Task Force Rift-404</p>
+                </div>
+            </div>
+        </section>
 
-            <!-- Corporate Section -->
-            <section class="gallery-section">
-                <h2 class="section-title">Corporate</h2>
-                <div class="logo-grid">
-                    <!-- Corporate Logos -->
-                    <!-- Add your corporate logos here -->
+        <!-- Corporate Section -->
+        <section class="gallery-section">
+            <h2 class="section-title">Corporate</h2>
+            <div class="logo-grid">
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Rythen%20Arms.png" alt="Rythen Arms">
+                    <p>Rythen Arms</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Cesco%20Music%20Group.png" alt="Cesco Music Group">
+                    <p>Cesco Music Group</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Xtract%20Services%20(Q).png" alt="Xtract Services">
+                    <p>Xtract Services</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/InkTech%20Quote.png" alt="InkTech">
+                    <p>InkTech</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Elgius.png" alt="Elgius Inc.">
+                    <p>Elgius Inc.</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Particle%20Corporation.png" alt="CyberWorks">
+                    <p>CyberWorks</p>
+                </div>
+                <div>
+                    <img src="https://sd75-my.sharepoint.com/personal/1345298_learn75_ca/Documents/Desktop/UGF%20Graphic%20Design/Swarm%20Car%20Company.png" alt="Swarm Car Company">
+                    <p>Swarm Car Company</p>
+                </div>
                 </div>
             </section>
 
