--- a/highcommand/dashboard.html
+++ b/highcommand/dashboard.html
@@ -3,343 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>United Federation - Command Center</title>
+    <title>High Command Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Orbitron', sans-serif;
-            background-color: #1c1c1c;
-            color: #f0f0f0;
+            background-color: #121212;
+            color: #ff4c4c;
             margin: 0;
-            padding: 0;
-        }
-
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
             padding: 20px;
-            background-color: #0f0f0f;
-            border-bottom: 2px solid #ff4c4c;
         }
 
-        .header img {
-            width: 120px;
-            height: auto;
-        }
-
-        .header h1 {
-            color: #ff4c4c;
-            font-size: 36px;
-            margin: 0;
-        }
-
-        .nav {
-            display: flex;
-            justify-content: center;
-            background-color: #181818;
-            padding: 15px;
-        }
-
-        .nav a {
-            text-decoration: none;
-            color: #ff4c4c;
-            margin: 0 20px;
-            font-size: 18px;
-        }
-
-        .nav a:hover {
-            color: #ff9999;
-        }
-
-        .container {
-            padding: 40px;
+        h1 {
             text-align: center;
-        }
-
-        h2 {
-            color: #ff4c4c;
-            font-size: 28px;
-            margin-bottom: 20px;
+            color: white;
         }
 
         .dashboard-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 20px;
             margin-top: 20px;
         }
 
         .card {
             background-color: #2b2b2b;
-            border: 2px solid #ff4c4c;
-            padding: 20px;
             border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s, background-color 0.3s;
+            padding: 20px;
+            box-shadow: 0 0 5px rgba(255, 76, 76, 0.5);
+            transition: transform 0.2s;
+            color: white;
+            position: relative; /* For pseudo-elements if needed */
         }
 
         .card:hover {
-            background-color: #ff4c4c;
-            color: #1c1c1c;
-            transform: translateY(-10px);
+            transform: scale(1.05); /* Slightly scale up the card on hover */
         }
 
-        .card:hover h4, .card:hover p {
-            color: #1c1c1c;
+        .in-progress {
+            background-color: #333; /* Dark background for in-progress */
+            color: yellow; /* Yellow text for in-progress */
+            border: 2px solid yellow; /* Yellow border for in-progress */
         }
 
-        footer {
-            margin-top: 50px;
-            padding: 20px;
-            text-align: center;
-            color: #ff4c4c;
-            background-color: #181818;
+        .failed {
+            background-color: #333; /* Dark background for failed */
+            color: #ff4c4c; /* Red text for failed */
+            border: 2px solid #ff4c4c; /* Red border for failed */
+            box-shadow: 0 0 20px rgba(255, 76, 76, 0.7), 0 0 30px rgba(255, 76, 76, 0.5);
+            animation: pulse 2s infinite; /* Pulsing animation */
         }
 
-        /* Add any additional styling for forms and interactive elements */
-        input, textarea, select {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ff4c4c;
-            background-color: #1c1c1c;
-            color: #f0f0f0;
-            border-radius: 5px;
+        .completed {
+            background-color: #333; /* Dark background for completed */
+            color: green; /* Green text for completed */
+            border: 2px solid green; /* Green border for completed */
         }
 
-        button {
-            padding: 10px 20px;
-            background-color: #ff4c4c;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            color: #f0f0f0;
-        }
-
-        button:hover {
-            background-color: #ff9999;
-        }
-
-        #missionList, #meetingList {
-            text-align: left;
-            margin-top: 20px;
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 20px rgba(255, 76, 76, 0.7), 0 0 30px rgba(255, 76, 76, 0.5);
+            }
+            50% {
+                box-shadow: 0 0 30px rgba(255, 76, 76, 0.5), 0 0 40px rgba(255, 76, 76, 0.3);
+            }
+            100% {
+                box-shadow: 0 0 20px rgba(255, 76, 76, 0.7), 0 0 30px rgba(255, 76, 76, 0.5);
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Header with logo and title -->
-    <header class="header">
-        <img src="https://i.imgur.com/Gn60P1H.png" alt="United Federation Logo">
-        <h1>United Federation - Command Center</h1>
-    </header>
-
-    <!-- Navigation bar -->
-    <nav class="nav">
-        <a href="#">Mission Status</a>
-        <a href="#">Upcoming Meetings</a>
-        <a href="#">Fleet Readiness</a>
-        <a href="#">Quick Links</a>
-    </nav>
-
-    <!-- Main Content -->
-    <div class="container">
-        <h2>Welcome, Commander</h2>
-        <p>This is your central hub for all operational matters.</p>
-
-        <!-- New Dashboard Grid -->
-        <div class="dashboard-grid">
-            <!-- Mission Status Card -->
-            <div class="card">
-                <h3>Mission Status</h3>
-                <div id="missionList">
-                    <!-- Missions will be dynamically added here -->
-                </div>
-                <button onclick="showMissionForm()">Add New Mission</button>
-                <!-- Hidden form to add a new mission -->
-                <div id="missionForm" style="display:none; margin-top: 20px;">
-                    <input type="text" id="missionName" placeholder="Mission Name" />
-                    <textarea id="missionDescription" placeholder="Mission Description"></textarea>
-                    <select id="missionStatus">
-                        <option value="in-progress">In Progress</option>
-                        <option value="completed">Completed</option>
-                        <option value="failed">Failed</option>
-                    </select>
-                    <button onclick="addMission()">Add Mission</button>
-                </div>
-            </div>
-
-            <!-- Upcoming Meetings Card -->
-            <div class="card">
-                <h3>Upcoming Meetings</h3>
-                <div id="meetingList">
-                    <!-- Meetings will be dynamically added here -->
-                </div>
-                <button onclick="showMeetingForm()">Add New Meeting</button>
-                <!-- Hidden form to add a new meeting -->
-                <div id="meetingForm" style="display:none; margin-top: 20px;">
-                    <input type="text" id="meetingTitle" placeholder="Meeting Title" />
-                    <textarea id="meetingAgenda" placeholder="Meeting Agenda"></textarea>
-                    <input type="datetime-local" id="meetingTime" />
-                    <button onclick="addMeeting()">Add Meeting</button>
-                </div>
-            </div>
+    <h1>High Command Dashboard</h1>
+    <div class="dashboard-grid">
+        <div class="card in-progress">
+            <h3>Mission Alpha</h3>
+            <p>Status: In Progress</p>
+        </div>
+        <div class="card failed">
+            <h3>Mission Beta</h3>
+            <p>Status: Failed</p>
+        </div>
+        <div class="card completed">
+            <h3>Mission Gamma</h3>
+            <p>Status: Completed</p>
+        </div>
+        <div class="card in-progress">
+            <h3>Mission Delta</h3>
+            <p>Status: In Progress</p>
+        </div>
+        <div class="card failed">
+            <h3>Mission Epsilon</h3>
+            <p>Status: Failed</p>
+        </div>
+        <div class="card completed">
+            <h3>Mission Zeta</h3>
+            <p>Status: Completed</p>
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
-        United Federation © 2024 - All Rights Reserved
-    </footer>
-
-    <!-- Script for managing missions and meetings with local storage -->
-    <script>
-        // Initialize missions and meetings from local storage
-        let missions = JSON.parse(localStorage.getItem('missions')) || [];
-        let meetings = JSON.parse(localStorage.getItem('meetings')) || [];
-
-        // Function to show the mission form
-        function showMissionForm() {
-            document.getElementById('missionForm').style.display = 'block';
-        }
-
-        // Function to add a new mission
-        function addMission() {
-            const missionName = document.getElementById('missionName').value;
-            const missionDescription = document.getElementById('missionDescription').value;
-            const missionStatus = document.getElementById('missionStatus').value;
-
-            if (missionName && missionDescription) {
-                missions.push({
-                    name: missionName,
-                    description: missionDescription,
-                    status: missionStatus
-                });
-                saveData();
-                renderMissions();
-                clearMissionForm();
-            }
-        }
-
-        // Function to render missions on the page
-        function renderMissions() {
-            const missionList = document.getElementById('missionList');
-            missionList.innerHTML = ''; // Clear previous missions
-
-            missions.forEach((mission, index) => {
-                let statusColor = getStatusColor(mission.status);
-
-                missionList.innerHTML += `
-                    <div style="margin-bottom: 15px; padding: 10px; border: 2px solid ${statusColor}; border-radius: 5px;">
-                        <h4 style="color: ${statusColor};">${mission.name}</h4>
-                        <p>${mission.description}</p>
-                        <p>Status: <span style="color: ${statusColor};">${mission.status.replace('-', ' ').toUpperCase()}</span></p>
-                        <button onclick="editMission(${index})" style="padding: 5px 10px; background-color: ${statusColor}; border: none; border-radius: 5px;">Edit</button>
-                    </div>
-                `;
-            });
-        }
-
-        // Function to get color based on status
-        function getStatusColor(status) {
-            if (status === 'in-progress') return '#ff4c4c'; // Red for in progress
-            if (status === 'completed') return '#4cff4c'; // Green for completed
-            if (status === 'failed') return '#ff4c4c'; // Red for failed
-        }
-
-        // Function to show the meeting form
-        function showMeetingForm() {
-            document.getElementById('meetingForm').style.display = 'block';
-        }
-
-        // Function to add a new meeting
-        function addMeeting() {
-            const meetingTitle = document.getElementById('meetingTitle').value;
-            const meetingAgenda = document.getElementById('meetingAgenda').value;
-            const meetingTime = new Date(document.getElementById('meetingTime').value);
-
-            if (meetingTitle && meetingAgenda) {
-                meetings.push({
-                    title: meetingTitle,
-                    agenda: meetingAgenda,
-                    time: meetingTime
-                });
-                saveData();
-                renderMeetings();
-                clearMeetingForm();
-            }
-        }
-
-        // Function to render meetings on the page
-        function renderMeetings() {
-            const meetingList = document.getElementById('meetingList');
-            meetingList.innerHTML = ''; // Clear previous meetings
-
-            meetings.forEach((meeting, index) => {
-                meetingList.innerHTML += `
-                    <div style="margin-bottom: 15px; padding: 10px; border: 2px solid #00ff99; border-radius: 5px;">
-                        <h4 style="color: #00ff99;">${meeting.title}</h4>
-                        <p>Agenda: ${meeting.agenda}</p>
-                        <p>Time: ${meeting.time.toLocaleString()}</p>
-                        <button onclick="editMeeting(${index})" style="padding: 5px 10px; background-color: #00ff99; border: none; border-radius: 5px;">Edit</button>
-                    </div>
-                `;
-            });
-        }
-
-        // Function to edit a mission
-        function editMission(index) {
-            const mission = missions[index];
-            document.getElementById('missionName').value = mission.name;
-            document.getElementById('missionDescription').value = mission.description;
-            document.getElementById('missionStatus').value = mission.status;
-
-            // Remove the mission from the list to avoid duplicates
-            missions.splice(index, 1);
-            saveData();
-            renderMissions();
-        }
-
-        // Function to edit a meeting
-        function editMeeting(index) {
-            const meeting = meetings[index];
-            document.getElementById('meetingTitle').value = meeting.title;
-            document.getElementById('meetingAgenda').value = meeting.agenda;
-            document.getElementById('meetingTime').value = meeting.time.toISOString().slice(0, 16); // Set date/time value
-
-            // Remove the meeting from the list to avoid duplicates
-            meetings.splice(index, 1);
-            saveData();
-            renderMeetings();
-        }
-
-        // Function to save data to local storage
-        function saveData() {
-            localStorage.setItem('missions', JSON.stringify(missions));
-            localStorage.setItem('meetings', JSON.stringify(meetings));
-        }
-
-        // Function to clear mission form inputs
-        function clearMissionForm() {
-            document.getElementById('missionForm').style.display = 'none';
-            document.getElementById('missionName').value = '';
-            document.getElementById('missionDescription').value = '';
-            document.getElementById('missionStatus').value = 'in-progress';
-        }
-
-        // Function to clear meeting form inputs
-        function clearMeetingForm() {
-            document.getElementById('meetingForm').style.display = 'none';
-            document.getElementById('meetingTitle').value = '';
-            document.getElementById('meetingAgenda').value = '';
-            document.getElementById('meetingTime').value = '';
-        }
-
-        // Initial render on page load
-        renderMissions();
-        renderMeetings();
-    </script>
 </body>
 </html>
-
